Fix for non-wrapping event descriptions

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -816,7 +816,7 @@ body {
 }
 
 
-/***** EventHub Specific *****/
+/***** Event Registration Tool Specific *****/
 .eventhub-growl{
   position: fixed;
   margin: 0px;
@@ -831,7 +831,7 @@ em.required{
 }
 
 .eventhub-linebreak{
-  white-space: pre;
+  white-space: pre-line;
 }
 
 .nav-tabs>li>a{
